--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-stream = "0.3.3"
+flo_stream = "0.7.0"
+futures-core = "0.3.25"
+futures-util = "0.3.25"
+tokio = { version = "1", features = ["full"] }
+tokio-stream = "0.1.11"
+warp = "0.3"
